--- a/css/estilonuevo.css
+++ b/css/estilonuevo.css
@@ -20,24 +20,24 @@
 }
 .header #titulo {
   font-family: "Shantell Sans", cursive;
-  font-size: 50px;
+  font-size: 40px;
   color: #264653;
   display: flex;
   align-items: center;
   text-shadow: 8px 8px 5px #e9c46a;
 }
 .header .navheader {
-  padding-top: 10px;
+  padding-top: 3px;
   padding-bottom: 20px;
   display: flex;
   flex-flow: column nowrap;
   list-style-type: none;
   justify-content: space-between;
-  margin-left: 100px;
+  margin-left: 50px;
 }
 .header .navheader .redes .img {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   margin: 3px;
 }
 .header .navheader .redes .img:hover {
@@ -190,7 +190,331 @@ button {
   border: solid 3px #f4a261;
 }
 
-@media (min-width: 600px) and (orientation: landscape) {
+.body {
+  height: 80%;
+  width: 100%;
+  background-image: url("../imagenes/fondo2.jpg");
+  background-size: cover;
+}
+.body #adopt {
+  height: 40%;
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+.body #adopt .classtitulogatos {
+  width: 100%;
+  height: 10%;
+  background-color: #f4a261;
+  margin-top: 10px;
+}
+.body #adopt .classtitulogatos #titulogatos {
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  color: #264653;
+  text-align: center;
+}
+.body #adopt .gat {
+  margin-top: 2px;
+  display: flex;
+  height: 100px;
+  width: 100px;
+}
+.body #adopt .gat img {
+  height: 100%;
+  width: 100%;
+}
+.body #adopt .gat:hover {
+  height: 200%;
+  width: 200%;
+}
+.body .linkcontacto {
+  display: block;
+  height: 25%;
+  width: 100%;
+  background-color: aqua;
+  margin-top: 30%;
+}
+.body .linkcontacto .h1 {
+  height: 20%;
+  padding-top: 10%;
+}
+.body .linkcontacto .h1 #contacto {
+  background-color: #f4a261;
+  font-size: 15px;
+  color: #264653;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+}
+.body .linkcontacto .boton {
+  height: auto;
+  width: auto;
+  margin-top: 20px;
+  margin-left: 28%;
+  border: 20px solid #2a9d8f;
+  background-color: #2a9d8f;
+  border-radius: 30%;
+}
+.body .linkcontacto .boton a {
+  color: #f4a261;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+}
+
+#linkferias {
+  background-image: url("../imagenes/fondo2.jpg");
+  background-size: cover;
+  height: 130%;
+  width: 100%;
+}
+#linkferias .h2 {
+  background-color: #2a9d8f;
+  height: 10%;
+  width: 100%;
+  margin-top: 20px;
+}
+#linkferias .h2 h2 {
+  font-size: 40px;
+  color: #f4a261;
+  text-align: center;
+  font-family: "Shantell Sans", cursive;
+}
+#linkferias .list ul li {
+  font-size: 20px;
+  margin-top: 20px;
+  color: #264653;
+  background-color: #e9c46a;
+  font-family: "Shantell Sans", cursive;
+}
+#linkferias .imgproxactv {
+  display: flex;
+  flex-flow: row nowrap;
+  height: 300px;
+  width: 300px;
+}
+#linkferias .imgproxactv img {
+  margin: 70px;
+  height: 100%;
+  width: 100%;
+}
+#linkferias .imgproxactv img:hover {
+  height: 500px;
+  width: 500px;
+  transition-duration: 3s;
+}
+
+#ferias {
+  background-image: url("../imagenes/fondo2.jpg");
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+#ferias .h2 {
+  background-color: #2a9d8f;
+  height: 10%;
+  width: 100%;
+}
+#ferias .h2 h2 {
+  font-size: 40px;
+  color: #f4a261;
+  font-family: "Shantell Sans", cursive;
+  text-align: center;
+}
+#ferias .imgferias {
+  display: flex;
+  margin: 60px;
+  height: 100px;
+  width: 100px;
+}
+#ferias .imgferias img {
+  height: 100%;
+  width: 100%;
+  margin: 30px;
+  flex-flow: row wrap;
+}
+#ferias .imgferias img:hover {
+  height: 400px;
+  width: 400px;
+  transition-duration: 3s;
+}
+
+@media (min-width: 451px) and (max-width: 700px) {
+  .header {
+    height: 20%;
+  }
+  .header #logo {
+    margin: 30px;
+    margin-top: 5px;
+    width: 15%;
+    height: 75%;
+  }
+  .header #titulo {
+    width: 50%;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+  }
+  .header .navheader {
+    padding-left: 20px;
+    flex-flow: row nowrap;
+  }
+  .header .navheader .redes .img {
+    width: 35px;
+    height: 35px;
+    margin: 3px;
+  }
+  main {
+    width: 100%;
+    height: 190%;
+    display: grid;
+    grid-template-areas: "nav1 carousel nav2" "perros presentacion gatos";
+    grid-template-columns: 5fr 6fr 5fr;
+    grid-template-rows: 45% 50%;
+  }
+  main #carousel {
+    padding-top: 100px;
+  }
+  main #nav1 {
+    padding-top: 100px;
+    text-align: center;
+  }
+  main #nav2 {
+    padding-top: 100px;
+    text-align: center;
+  }
+  main li {
+    padding-top: 20px;
+    list-style-type: none;
+    font-size: 15px;
+    font-weight: bold;
+  }
+  main #presentacion {
+    padding-top: 10px;
+    font-size: 15px;
+  }
+  main #perros {
+    padding-top: 30px;
+  }
+  main #perros img {
+    width: 100px;
+    height: 100px;
+  }
+  main #gatos {
+    padding-top: 30px;
+  }
+  main #gatos img {
+    width: 110px;
+    height: 110px;
+  }
+  main h3 {
+    font-size: 20px;
+  }
+  footer {
+    height: 15%;
+  }
+  footer a {
+    font-size: 13px;
+    padding-left: 40px;
+  }
+  .titulo4 {
+    font-size: 25px;
+  }
+  .titulo5 {
+    font-size: 20px;
+  }
+  textarea {
+    height: 100px;
+    width: 150px;
+  }
+  form {
+    height: 50%;
+    width: 70%;
+    margin-left: 15%;
+  }
+  .body {
+    height: 150%;
+  }
+  .body .linkcontacto {
+    height: 30%;
+    margin-top: 70px;
+  }
+  .body .linkcontacto .boton {
+    margin-left: 230px;
+    height: 60px;
+    width: auto;
+  }
+  .body .linkcontacto .boton a {
+    font-size: 15px;
+  }
+  .body .linkcontacto .h1 {
+    height: 20%;
+  }
+  .body .linkcontacto .h1 #contacto {
+    font-size: large;
+  }
+  #linkferias {
+    height: 80%;
+    width: 100%;
+  }
+  #linkferias .h2 {
+    height: 5%;
+    width: 100%;
+    margin-top: 10px;
+  }
+  #linkferias .h2 h2 {
+    font-size: 15px;
+  }
+  #linkferias .list ul li {
+    font-size: 10px;
+    margin-top: 10px;
+  }
+  #linkferias .imgproxactv {
+    display: flex;
+    flex-flow: row nowrap;
+    height: 150px;
+    width: 150px;
+  }
+  #linkferias .imgproxactv img {
+    margin: 15px;
+    height: 100%;
+    width: 100%;
+  }
+  #linkferias .imgproxactv img:hover {
+    height: 200px;
+    width: 200px;
+    transition-duration: 3s;
+  }
+  #ferias {
+    height: 50%;
+    width: 100%;
+  }
+  #ferias .h2 {
+    height: 5%;
+    width: 100%;
+  }
+  #ferias .h2 h2 {
+    font-size: 10px;
+  }
+  #ferias .imgferias {
+    display: flex;
+    height: 50px;
+    width: 50px;
+  }
+  #ferias .imgferias img {
+    height: 100%;
+    width: 100%;
+    margin: 5px;
+    flex-flow: row wrap;
+  }
+  #ferias .imgferias img:hover {
+    height: 100px;
+    width: 100px;
+    transition-duration: 3s;
+  }
+}
+@media (min-width: 701px) and (max-width: 840px) {
   .header {
     height: 20%;
   }
@@ -202,15 +526,15 @@ button {
   }
   .header #titulo {
     width: 70%;
-    font-size: 60px;
+    font-size: 40px;
     display: flex;
     align-items: center;
   }
   .header .navheader {
-    padding-left: 80px;
+    padding-left: 50px;
     flex-flow: row nowrap;
   }
-  .header .navheader .img {
+  .header .navheader .redes .img {
     width: 60px;
     height: 60px;
     margin: 5px;
@@ -282,6 +606,445 @@ button {
     height: 50%;
     width: 30%;
     margin-left: 35%;
+  }
+  .body {
+    height: 150%;
+  }
+  .body .linkcontacto {
+    height: 30%;
+    margin-top: 70px;
+  }
+  .body .linkcontacto .boton {
+    margin-left: 350px;
+    height: 60px;
+    width: auto;
+  }
+  .body .linkcontacto .boton a {
+    font-size: 15px;
+  }
+  .body .linkcontacto .h1 {
+    height: 20%;
+  }
+  .body .linkcontacto .h1 #contacto {
+    font-size: large;
+  }
+  .body #adopt .gat {
+    margin: 20px;
+  }
+  #linkferias {
+    height: 80%;
+    width: 100%;
+  }
+  #linkferias .h2 {
+    height: 6%;
+    width: 100%;
+    margin-top: 10px;
+  }
+  #linkferias .h2 h2 {
+    font-size: 15px;
+  }
+  #linkferias .list ul li {
+    font-size: 10px;
+    margin-top: 10px;
+  }
+  #linkferias .imgproxactv {
+    display: flex;
+    flex-flow: row nowrap;
+    height: 150px;
+    width: 150px;
+  }
+  #linkferias .imgproxactv img {
+    margin: 50px;
+    height: 100%;
+    width: 100%;
+  }
+  #linkferias .imgproxactv img:hover {
+    height: 300px;
+    width: 300px;
+    transition-duration: 3s;
+  }
+  #ferias {
+    height: 50%;
+    width: 100%;
+  }
+  #ferias .h2 {
+    height: 10%;
+    width: 100%;
+  }
+  #ferias .h2 h2 {
+    font-size: 15px;
+  }
+  #ferias .imgferias {
+    display: flex;
+    margin: 30px;
+    height: 80px;
+    width: 80px;
+  }
+  #ferias .imgferias img {
+    height: 100%;
+    width: 100%;
+    margin: 10px;
+    flex-flow: row wrap;
+  }
+  #ferias .imgferias img:hover {
+    height: 100px;
+    width: 100px;
+    transition-duration: 3s;
+  }
+}
+@media (max-width: 450px) {
+  .header {
+    height: 25%;
+  }
+  .header #logo {
+    margin: 20px;
+    margin-top: 5px;
+    width: 20%;
+    height: 55%;
+  }
+  .header #titulo {
+    width: 30%;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+  }
+  .header .navheader {
+    padding-left: 30px;
+    flex-flow: column nowrap;
+  }
+  .header .navheader .redes .img {
+    width: 35px;
+    height: 35px;
+  }
+  main {
+    width: 100%;
+    height: 180%;
+    display: grid;
+    grid-template-areas: "nav1 nav2" "carousel carousel" "presentacion presentacion" "perros perros" "gatos gatos";
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: 13% 20% 20% 15% 10%;
+    grid-row-gap: 10px;
+  }
+  main #nav1 {
+    padding-top: 30px;
+    text-align: center;
+  }
+  main #nav2 {
+    padding-top: 30px;
+    text-align: center;
+  }
+  main li {
+    padding-top: 10px;
+    list-style-type: none;
+    font-size: 15px;
+    font-weight: bold;
+  }
+  main #presentacion {
+    padding-top: 20px;
+    font-size: 18px;
+  }
+  main #perros {
+    margin-top: 100px;
+  }
+  main #perros img {
+    width: 100px;
+    height: 100px;
+  }
+  main #gatos {
+    margin-top: 100px;
+  }
+  main #gatos img {
+    width: 110px;
+    height: 110px;
+  }
+  main h3 {
+    font-size: 20px;
+  }
+  footer {
+    height: 15%;
+  }
+  footer a {
+    font-size: 14px;
+    padding-left: 10px;
+  }
+  .titulo4 {
+    font-size: 25px;
+  }
+  .titulo5 {
+    font-size: 20px;
+  }
+  textarea {
+    height: 100px;
+    width: 150px;
+  }
+  form {
+    height: 50%;
+    width: 50%;
+    margin-left: 25%;
+  }
+  .body {
+    height: 150%;
+    width: 100%;
+  }
+  .body #adopt .classtitulogatos {
+    height: 20px;
+  }
+  .body #adopt .classtitulogatos h1 {
+    font-size: 10px;
+  }
+  .body .linkcontacto .boton {
+    margin-left: 140px;
+    height: 60px;
+    width: auto;
+  }
+  .body .linkcontacto .boton a {
+    font-size: 15px;
+  }
+  #linkferias {
+    height: 60%;
+    width: 100%;
+  }
+  #linkferias .h2 {
+    height: 5%;
+    width: 100%;
+    margin-top: 10px;
+  }
+  #linkferias .h2 h2 {
+    font-size: 13px;
+  }
+  #linkferias .list ul li {
+    font-size: 10px;
+    margin-top: 10px;
+  }
+  #linkferias .imgproxactv {
+    display: flex;
+    flex-flow: row nowrap;
+    height: 80px;
+    width: 80px;
+  }
+  #linkferias .imgproxactv img {
+    margin: 15px;
+    margin-left: 15px;
+    height: 100%;
+    width: 100%;
+  }
+  #linkferias .imgproxactv img:hover {
+    height: 100px;
+    width: 100px;
+    transition-duration: 3s;
+  }
+  #ferias {
+    height: 30%;
+    width: 100%;
+  }
+  #ferias .h2 {
+    height: 10%;
+    width: 100%;
+  }
+  #ferias .h2 h2 {
+    font-size: 10px;
+  }
+  #ferias .imgferias {
+    display: flex;
+    height: 30px;
+    width: 30px;
+  }
+  #ferias .imgferias img {
+    height: 100%;
+    width: 100%;
+    margin: 5px;
+    flex-flow: row wrap;
+  }
+  #ferias .imgferias img:hover {
+    height: 50px;
+    width: 50px;
+    transition-duration: 3s;
+  }
+}
+@media screen and (min-width: 841px) {
+  .header {
+    height: 20%;
+  }
+  .header #logo {
+    margin: 30px;
+    margin-top: 5px;
+    width: 10%;
+    height: 85%;
+  }
+  .header #titulo {
+    width: 70%;
+    font-size: 60px;
+    display: flex;
+    align-items: center;
+  }
+  .header .navheader {
+    padding-left: 40px;
+    flex-flow: row nowrap;
+  }
+  .header .navheader .redes .img {
+    width: 60px;
+    height: 60px;
+    margin: 5px;
+  }
+  main {
+    width: 100%;
+    height: 170%;
+    display: grid;
+    grid-template-areas: "nav1 carousel nav2" "perros presentacion gatos";
+    grid-template-columns: 4fr 6fr 4fr;
+    grid-template-rows: 45% 50%;
+  }
+  main #carousel {
+    padding-top: 50px;
+  }
+  main #nav1 {
+    padding-top: 100px;
+    text-align: center;
+  }
+  main #nav2 {
+    padding-top: 100px;
+    text-align: center;
+  }
+  main li {
+    padding-top: 20px;
+    list-style-type: none;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  main #presentacion {
+    padding-top: 10px;
+    font-size: 18px;
+  }
+  main #perros {
+    padding-top: 60px;
+  }
+  main #perros img {
+    width: 150px;
+    height: 150px;
+  }
+  main #gatos {
+    padding-top: 60px;
+  }
+  main #gatos img {
+    width: 160px;
+    height: 160px;
+  }
+  main h3 {
+    font-size: 20px;
+  }
+  footer {
+    height: 10%;
+  }
+  footer a {
+    font-size: 20px;
+    padding-left: 40px;
+  }
+  .titulo4 {
+    font-size: 25px;
+  }
+  .titulo5 {
+    font-size: 20px;
+  }
+  textarea {
+    height: 100px;
+    width: 150px;
+  }
+  form {
+    height: 50%;
+    width: 30%;
+    margin-left: 35%;
+  }
+  .body {
+    height: 220%;
+  }
+  .body .linkcontacto {
+    height: 25%;
+    margin-top: 50px;
+  }
+  .body .linkcontacto .boton {
+    margin-left: 560px;
+    height: 60px;
+    width: auto;
+  }
+  .body .linkcontacto .boton a {
+    font-size: 15px;
+  }
+  .body .linkcontacto .h1 {
+    height: 10%;
+    margin-top: 10px;
+  }
+  .body .linkcontacto .h1 #contacto {
+    font-size: 30px;
+  }
+  .body #adopt .gat {
+    height: 200px;
+    width: 200px;
+    justify-content: flex-start;
+  }
+  .body #adopt .gat:hover {
+    height: 500px;
+    width: 500px;
+    transition-duration: 3s;
+  }
+  #linkferias {
+    height: 130%;
+    width: 100%;
+  }
+  #linkferias .h2 {
+    height: 10%;
+    width: 100%;
+    margin-top: 20px;
+  }
+  #linkferias .h2 h2 {
+    font-size: 40px;
+  }
+  #linkferias .list ul li {
+    font-size: 20px;
+    margin-top: 20px;
+  }
+  #linkferias .imgproxactv {
+    display: flex;
+    flex-flow: row nowrap;
+    height: 280px;
+    width: 280px;
+  }
+  #linkferias .imgproxactv img {
+    margin: 50px;
+    height: 100%;
+    width: 100%;
+  }
+  #linkferias .imgproxactv img:hover {
+    height: 500px;
+    width: 500px;
+    transition-duration: 3s;
+  }
+  #ferias {
+    height: 100%;
+    width: 100%;
+  }
+  #ferias .h2 {
+    height: 20%;
+    width: 100%;
+  }
+  #ferias .h2 h2 {
+    font-size: 35px;
+  }
+  #ferias .imgferias {
+    display: flex;
+    margin: 50px;
+    height: 100px;
+    width: 100px;
+  }
+  #ferias .imgferias img {
+    height: 100%;
+    width: 100%;
+    margin: 20px;
+    flex-flow: row wrap;
+  }
+  #ferias .imgferias img:hover {
+    height: 400px;
+    width: 400px;
+    transition-duration: 3s;
   }
 }
 
